--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-"Hello World" 
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <title>
+        Бот для печати кода
+    </title>
+</head>
+
+<body>
+Всем привет!<br>
+Это сайт принтер-бота. 
+Актуальную версию можно скачать по <a href="https://github.com/ProgrammerMaf/Programmermaf.github.io/raw/master/Bot.zip">ссылке</a>.
+</body>
+</html>
